--- a/landing_page_B2B.html
+++ b/landing_page_B2B.html
@@ -518,7 +518,7 @@
       },
       {
         title: 'Manque de visibilité intermédiaire',
-        desc: 'Entre le producteur et le distributeur final, les étapes sont une boîte noire. Personne n\'a de vue globale.',
+        desc: 'Entre le producteur et le distributeur final, les étapes sont une boîte noire. Peu de personnes ont une vue globale.',
       },
       {
         title: 'Risque réglementaire croissant',
@@ -618,8 +618,7 @@
         icon: '💰', title: 'Économiques',
         items: [
           'Moins de destructions massives et inutiles',
-          'Réduction des coûts de recherche d\'information',
-          'Gain de temps administratif mesurable',
+          'Gain de temps administratif mesurable : réduction des coûts de recherche d\'information',
           'Diminution du risque de pénalités réglementaires',
         ]
       },
