--- a/landing_page_B2B.html
+++ b/landing_page_B2B.html
@@ -34,8 +34,8 @@
       --text:      #e8ede9;
       --text-2:    #8fa492;
       --text-3:    #5a6e5e;
-      --serif:     'Syne', sans-serif;
-      --body:      'Source Sans 3', sans-serif;
+      --serif:    'Playfair Display', Georgia, serif;
+      --body:     'Nunito', sans-serif;
     }
 
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
