--- a/landing_page_B2B.html
+++ b/landing_page_B2B.html
@@ -735,34 +735,34 @@
     }
 
     async function handleSubmit(e) {
-  e.preventDefault();
-  setLoading(true);
+        e.preventDefault();
+        setLoading(true);
 
-  try {
-    const body = new URLSearchParams({
-      entreprise: form.entreprise,
-      email: form.email,
-      taille: form.taille,
-      probleme: form.probleme || "",
-      source: "landing-b2b",
-      token: TOKEN,
-    });
+        try {
+            const body = new URLSearchParams({
+            entreprise: form.entreprise,
+            email: form.email,
+            taille: form.taille,
+            probleme: form.probleme || "",
+            source: "landing-b2b",
+            token: TOKEN,
+            });
 
-    await fetch(APPS_SCRIPT_URL, {
-      method: "POST",
-      mode: "no-cors",   // <-- contourne CORS
-      body,
-    });
+            await fetch(APPS_SCRIPT_URL, {
+            method: "GET",
+            mode: "no-cors",   // <-- contourne CORS
+            body,
+            });
 
-    // Comme no-cors empêche de lire la réponse, on confirme côté UI
-    setSubmitted(true);
-  } catch (err) {
-    console.error(err);
-    alert("Impossible d’envoyer la demande pour le moment.");
-  } finally {
-    setLoading(false);
-  }
-}
+            // Comme no-cors empêche de lire la réponse, on confirme côté UI
+            setSubmitted(true);
+        } catch (err) {
+            console.error(err);
+            alert("Impossible d’envoyer la demande pour le moment.");
+        } finally {
+            setLoading(false);
+        }
+        }
 
     const isValid = form.entreprise && form.email && form.taille;
 
