switcheing to GET method insteag of POST

--- a/landing_page_B2B.html
+++ b/landing_page_B2B.html
@@ -739,19 +739,18 @@
         setLoading(true);
 
         try {
-            const body = new URLSearchParams({
-            entreprise: form.entreprise,
-            email: form.email,
-            taille: form.taille,
-            probleme: form.probleme || "",
-            source: "landing-b2b",
-            token: TOKEN,
+            const params = new URLSearchParams({
+                entreprise: form.entreprise,
+                email: form.email,
+                taille: form.taille,
+                probleme: form.probleme || "",
+                source: "landing-b2b",
+                token: TOKEN,
             });
 
-            await fetch(APPS_SCRIPT_URL, {
-            method: "GET",
-            mode: "no-cors",   // <-- contourne CORS
-            body,
+            await fetch(`${APPS_SCRIPT_URL}?${params.toString()}`, {
+                method: "GET",
+                mode: "no-cors",
             });
 
             // Comme no-cors empêche de lire la réponse, on confirme côté UI
