B2C form dynamic correction

--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -887,8 +887,8 @@
         try {
             const body = new URLSearchParams({
             entreprise:"Consommateur final",
-            email: form.email,
-            probleme: form.interest || "",
+            email: email,
+            probleme:interest || "",
             source: "landing-b2c",
             token: TOKEN,
             });
