B2C form dynamic correction

--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -888,6 +888,7 @@
             const body = new URLSearchParams({
             entreprise:"Consommateur final",
             email: email,
+            taille: "consommateur", 
             probleme:interest || "",
             source: "landing-b2c",
             token: TOKEN,
