chgmt_contact_mail

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
     <!-- Footer -->
     <footer class="footer">
       <p class="footer-text">
-        Une question ? <a href="mailto:contact@datafood.fr">Contactez-nous</a>
+        Une question ? <a href="mailto:berenice.cardoso-faucher@imt-atlantique.net">Contactez-nous</a>
       </p>
     </footer>
   </div>
