--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
       }
     }
   </style>
+  <!-- SCRIPT GOATCOUNTER : pour compter le nombre de vues -->
+  <script data-goatcounter="https://alix29.goatcounter.com/count"
+          async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body>
   <!-- Decorative blobs -->
