--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -516,6 +516,11 @@
     ::-webkit-scrollbar-track { background: var(--bg); }
     ::-webkit-scrollbar-thumb { background: var(--green-l); border-radius: 3px; }
   </style>
+
+  <!-- SCRIPT GOATCOUNTER : pour compter le nombre de vues -->
+  <script data-goatcounter="https://alix29.goatcounter.com/count"
+          async src="//gc.zgo.at/count.js"></script>
+          
 </head>
 <body>
 <div id="root"></div>
