--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -519,8 +519,8 @@
 
   <!-- SCRIPT GOATCOUNTER : pour compter le nombre de vues -->
   <script data-goatcounter="https://alix29.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
-          
+          async src="https://gc.zgo.at/count.js"></script>
+
 </head>
 <body>
 <div id="root"></div>
