--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   </style>
   <!-- SCRIPT GOATCOUNTER : pour compter le nombre de vues -->
   <script data-goatcounter="https://alix29.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
+          async src="https://gc.zgo.at/count.js"></script>
 
 </head>
 <body>
