--- a/landing_page_B2B.html
+++ b/landing_page_B2B.html
@@ -411,10 +411,10 @@
     ::-webkit-scrollbar-track { background: var(--bg); }
     ::-webkit-scrollbar-thumb { background: var(--text-3); border-radius: 3px; }
   </style>
-  
+
   <!-- SCRIPT GOATCOUNTER : pour compter le nombre de vues -->
   <script data-goatcounter="https://alix29.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
+          async src="https://gc.zgo.at/count.js"></script>
 
 </head>
 <body>
