--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -666,10 +666,10 @@
     ];
 
     const labelItems = [
-      { icon:'✅', label:'Ferme identifiée', badge:'Visible', type:'real' },
+      { icon:'🟢', label:'Ferme identifiée', badge:'Visible', type:'real' },
       { icon:'⚠️', label:'3 transporteurs impliqués', badge:'Caché', type:'hidden' },
       { icon:'⚠️', label:'Entrepôt frigorifique (4 jours)', badge:'Caché', type:'hidden' },
-      { icon:'✅', label:'Distributeur certifié Bio', badge:'Visible', type:'real' },
+      { icon:'🟢', label:'Distributeur certifié Bio', badge:'Visible', type:'real' },
       { icon:'⚠️', label:'Lot mélangé en usine', badge:'Caché', type:'hidden' },
     ];
 
@@ -735,7 +735,7 @@
         desc: 'Visualisez toute la chaîne : chaque étape, chaque acteur, chaque date. Transformations, transports, certifications.',
       },
       {
-        num: '03', emoji: '✅',
+        num: '03', emoji: '✔️',
         title: 'Choisissez',
         desc: 'Comparez deux produits sur leur transparence réelle. Choisissez en connaissance de cause, pas sur la foi d\'une étiquette.',
       },
