--- a/landing_page_B2C.html
+++ b/landing_page_B2C.html
@@ -345,6 +345,41 @@
       background: var(--ink); border-radius: 8px;
       display: flex; align-items: center; justify-content: center; font-size: 2.5rem;
     }
+        /* QR scan (remplace l’emoji 📷 dans la démo) */
+    .qr-box.qr-scan{
+      position: relative;
+      background: #0f1a14; /* un peu plus doux que var(--ink) */
+      border: 2px solid rgba(46,125,79,0.35);
+      overflow: hidden;
+    }
+
+    /* Cadre “scan” */
+    .qr-box.qr-scan::before{
+      content:"";
+      position:absolute;
+      inset:10px;
+      border-radius: 6px;
+      border: 2px solid rgba(46,125,79,0.9);
+    }
+
+    /* Ligne qui balaie */
+    .qr-box.qr-scan .scan-line{
+      position:absolute;
+      left:10px;
+      right:10px;
+      height: 3px;
+      border-radius: 999px;
+      background: rgba(46,125,79,0.95);
+      box-shadow: 0 0 16px rgba(46,125,79,0.7);
+      animation: scanMove 1.6s ease-in-out infinite;
+    }
+
+    /* Animation verticale */
+    @keyframes scanMove{
+      0%{ top:14px; opacity:0.8; }
+      50%{ top:74px; opacity:1; }
+      100%{ top:14px; opacity:0.8; }
+    }
     .qr-info h3 { font-family: var(--serif); font-size: 1.05rem; font-weight: 700; margin-bottom: 0.3rem; }
     .qr-info p  { font-size: 0.85rem; color: var(--ink-2); font-weight: 300; }
     .qr-arrow  { font-size: 1.5rem; color: var(--green); flex-shrink: 0; }
@@ -762,7 +797,9 @@
 
           {/* QR demo visuel */}
           <div className="qr-demo">
-            <div className="qr-box">📷</div>
+            <div className="qr-box qr-scan" aria-label="Scan QR">
+              <span className="scan-line"></span>
+            </div>
             <span className="qr-arrow">→</span>
             <div className="qr-info">
               <h3>Vous scannez → vous voyez tout</h3>
